# weathercn-rs

./: Cargo.toml  README.md
src/: citycode.rs  main.rs
